<resources>
    <string name="app_name">NammaMetroMVVM</string>
    <string name="checking_for_update">Checking For Update</string>
    <string name="checking_for_configuration">Checking For Configuration</string>
    <string name="checking_for_login_details">Checking For Login Details</string>

    <string name="update_available">Update Available!</string>
    <string name="update_info">There is a new version of app available,\nWith new features and bug fixes.\nWould you like to update the App?</string>
    <string name="update">Update</string>
    <string name="no_thanks">No Thanks</string>
    <string name="close_app">Close  App</string>
    <string name="retry">Retry</string>
    <string name="something_went_wrong">"Something went wrong! "</string>
    <string name="something_went_wrong_info">"Something went wrong! \nWould you like to try again ?"</string>

    <string name="no_internet">No Internet connection! </string>
    <string name="no_internet_info">No Internet connection! \nPlease Check the connection and try again</string>
    <string name="action_sign_in_short">Sign in</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="need_help">Need Help?</string>
    <string name="we_will_send_an_otp_to_your_number">We will send an OTP to your number\t\t</string>
    <string name="great_thanks">Great, Thanks!</string>
    <string name="did_not_receive_otp">Didn\'t receive OTP?</string>
    <string name="resend_in">\tResend in %1$s seconds</string>
    <string name="resend">\tResend</string>

    <string name="edit">\tEdit</string>
    <string name="otp_mismatch">"Otp Mismatch, Please Renter OTP"</string>
    <string name="otp_time_out">"Otp Time Out, Requested for new OTP"</string>
    <string name="invalid_mobile_number">Please Enter valid mobile number</string>
    <string name="enter_valid_otp">Please Enter valid OTP</string>
    <string name="skip">SKIP</string>
    <string name="home_screen_welcome">Hello, %1$s</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="logo">Logo</string>
    <string name="smartphone" translatable="false">Smartphone</string>
    <string name="proceed">Proceed</string>
    <string name="let_s_get_started">Let\'s Get Started</string>
    <string name="by_proceeding_you_accept">By proceeding you accept</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="title_activity_settings" translatable="false">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header" translatable="false">Messages</string>
    <string name="sync_header" translatable="false">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title" translatable="false">Your signature</string>
    <string name="reply_title" translatable="false">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title" translatable="false">Sync email periodically</string>
    <string name="attachment_title" translatable="false">Download incoming attachments</string>
    <string name="attachment_summary_on" translatable="false">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off" translatable="false">Only download attachments when manually requested</string>
    <string name="log_out">Log Out</string>
    <string name="language">Language</string>
    <string name="theme">Theme</string>
    <string name="light" translatable="false">Light</string>
    <string name="dark" translatable="false">Dark</string>
    <string name="system" translatable="false">System</string>
    <string name="english" translatable="false">English</string>
    <string name="kannada_kn" translatable="false">ಕನ್ನಡ</string>
    <string name="chip_english_id" translatable="false">\@+id/chip_english</string>
    <string name="version_build">Version: %1$s Build %2$s</string>
    <string name="content_description_media" translatable="false">ontent_description_media</string>
    <string name="navigated_from_homescreen_qr_tickets" translatable="false">homescreen_qr_tickets</string>
    <string name="navigated_from_homescreen_top_up" translatable="false">homescreen_top_up</string>
    <string name="navigated_from_splash_screen" translatable="false">splashscreen</string>
    <string name="navigated_from_homescreen_profile" translatable="false">navigated_from_homescreen_profile</string>
    <string name="card_top_up">Card Top up</string>
    <string name="click_here_to_add_top_up_a_card">Click here to Add,Top up a card.</string>
    <string name="click_here_to_click_here_to_purchase_or_use_qr_tickets">Click here to Click here to Purchase or Use QR Tickets.</string>
    <string name="log_in">Log In</string>
    <string name="not_now">Not Now</string>
    <string name="login_required">Login Required</string>
    <string name="login_required_details">You need to login to use this feature. \n Would you like to Login?</string>
    <string name="qr_tickets">QR Tickets</string>
    <string name="unused">Unused</string>
    <string name="other">Other</string>
    <string name="no_qr_tickets_present">No QR Tickets Present</string>
    <string name="rs_symbol">₹</string>
    <string name="purchased_on">Purchased On %1$s</string>
    <string name="used_on">Used on %1$s</string>
    <string name="cancelled_on">Cancelled On %1$s</string>
    <string name="expired_on">Expired On %1$s</string>
    <string name="purchase_initiated_on">Purchase Initiated On %1$s</string>
    <string name="more">More</string>
    <string name="purchase_new_ticket">Purchase New Ticket</string>
    <string name="from_station">From Station</string>
    <string name="to_station">To Station</string>
    <string name="status">Status</string>
    <string name="available_stations">Available Stations</string>
    <string name="enter_dest_station">To Station</string>
    <string name="enter_source_station">From Station</string>
    <string name="label">Label</string>
    <string name="station_details">Station Details</string>
    <string name="travelling_on">On</string>
    <string name="travel_date">Travel date</string>
    <string name="confirm_ticket">Confirm Ticket</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="from_">From:</string>
    <string name="to_">To:</string>
    <string name="on_">On:</string>
    <string name="passenger_count_">Passenger Count:</string>
    <string name="fare">Fare:</string>
    <string name="ticket_details">Ticket Details</string>
    <string name="trip_details">Trip Details</string>
    <string name="passenger_count">Passenger Count</string>
    <string name="qr_code">Qr Code</string>
    <string name="payment_details">Payment Details</string>
    <string name="txn_id_adapter">Transaction Id :</string>
    <string name="order_id_adapter">Payment Id :</string>
    <string name="payment_mode">Payment Mode :</string>
    <string name="transaction_time">Transaction On :</string>

</resources>