<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorSplashScreenBg"
    android:padding="12dp"
    tools:context=".ui.MainActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/splashscreen_bg"
        app:cardCornerRadius="250dp"
        app:layout_constraintEnd_toStartOf="@id/tv_user_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_profile"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:scaleType="centerCrop"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/ic_round_account_circle_24"
            app:tint="@color/bmrcl_color"
            android:contentDescription="@string/profile" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_user_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:text="@string/home_screen_welcome"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/cv_profile"
        app:layout_constraintEnd_toStartOf="@id/iv_settings"
        app:layout_constraintStart_toEndOf="@id/cv_profile"
        app:layout_constraintTop_toTopOf="@id/cv_profile" />

    <ImageView
        android:id="@+id/iv_settings"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:clickable="true"
        android:focusable="true"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_baseline_settings_24"
        app:layout_constraintBottom_toBottomOf="@id/cv_profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_user_name"
        app:layout_constraintTop_toTopOf="@id/cv_profile"
        app:tint="@color/bmrcl_color"
        android:contentDescription="@string/settings" />


</androidx.constraintlayout.widget.ConstraintLayout>